// Copyright (c) 2017-2022 VMware, Inc. or its affiliates
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package idl;

service CliToHub {
    rpc Initialize(InitializeRequest) returns (stream Message) {}
    rpc InitializeCreateCluster(InitializeCreateClusterRequest) returns (stream Message) {}
    rpc Execute(ExecuteRequest) returns (stream Message) {}
    rpc Finalize(FinalizeRequest) returns (stream Message) {}
    rpc Revert(RevertRequest) returns (stream Message) {}
    rpc GetConfig (GetConfigRequest) returns (GetConfigReply) {}
    rpc RestartAgents(RestartAgentsRequest) returns (RestartAgentsReply) {}
    rpc StopServices(StopServicesRequest) returns (StopServicesReply) {}
}

enum ClusterDestination {
  unknown_destination = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
  source = 1;
  intermediate = 2;
  target = 3;
}

message InitializeRequest {
    int32 agentPort = 1;
    string sourceGPHome = 2;
    string targetGPHome = 3;
    int32 sourcePort = 4;
    bool linkMode = 5;
    bool useHbaHostnames = 6;
    repeated uint32 ports = 7;
    double diskFreeRatio = 8;
}

message InitializeCreateClusterRequest {
  string dynamicLibraryPath = 1;
}

message ExecuteRequest {}
message FinalizeRequest {}

message RevertRequest {}

message RestartAgentsRequest {}
message RestartAgentsReply {
    repeated string agentHosts = 1;
}

message StopServicesRequest {}
message StopServicesReply {}

message SubstepStatus {
  Substep step = 1;
  Status status = 2;
}

enum Step {
  unknown_step = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
  initialize = 1;
  execute = 2;
  finalize = 3;
  revert = 4;
}

enum Substep {
    unknown_substep = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    saving_source_cluster_config = 1;
    start_hub = 2;
    start_agents = 3;
    check_disk_space = 4;
    generate_target_config = 5;
    init_target_cluster = 6;
    shutdown_target_cluster = 7;
    backup_target_master = 8;
    check_upgrade = 9;
    shutdown_source_cluster = 10;
    upgrade_master = 11;
    copy_master = 12;
    upgrade_primaries = 13;
    start_target_cluster = 14;
    update_target_catalog = 15;
    update_data_directories = 16;
    update_target_conf_files = 17;
    upgrade_standby = 18;
    upgrade_mirrors = 19;
    delete_tablespaces = 20;
    delete_target_cluster_datadirs = 21;
    delete_segment_statedirs = 22;
    stop_hub_and_agents = 23;
    delete_master_statedir = 24;
    archive_log_directories = 25;
    restore_source_cluster = 26;
    start_source_cluster = 27;
    restore_pgcontrol = 28;
    recoverseg_source_cluster = 29;
    step_status = 30;
    remove_source_mirrors = 31;
    wait_for_cluster_to_be_ready_after_adding_mirrors_and_standby = 32;
    wait_for_cluster_to_be_ready_after_updating_catalog = 33;
    stop_target_cluster = 34;
    setting_dynamic_library_path_on_target_cluster = 35;
}

enum Status {
    unknown_status = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    running = 1;
    complete = 2;
    failed = 3;
    skipped = 4;
}

message PrepareInitClusterRequest {}
message PrepareInitClusterReply {}

message Chunk {
  bytes buffer = 1;
  enum Type {
    unknown = 0;
    stdout = 1;
    stderr = 2;
  }
  Type type = 2;
}

message Message {
  oneof contents {
    Chunk chunk = 1;
    SubstepStatus status = 2;
    Response response = 3;
  }
}

message Response {
  oneof contents {
    InitializeResponse initializeResponse = 3;
    ExecuteResponse executeResponse = 4;
    FinalizeResponse finalizeResponse = 5;
    RevertResponse revertResponse = 6;
  }
}

message InitializeResponse {
  bool HasMirrors = 1;
  bool HasStandby = 2;
}

message Cluster {
  string GPHome = 1;
  int32 Port = 2;
  string CoordinatorDataDirectory = 3;
}

message ExecuteResponse {
  Cluster target = 1;
}

message FinalizeResponse {
  Cluster TargetCluster = 1;
  string TargetVersion = 2;
  string LogArchiveDirectory = 3;
  string ArchivedSourceCoordinatorDataDirectory = 4;
  string UpgradeID = 5;
}

message RevertResponse {
  Cluster source = 1;
  string SourceVersion = 2;
  string LogArchiveDirectory = 3;
}

message GetConfigRequest {
    string name = 1;
}
message GetConfigReply {
    string value = 1;
}

// Used to set the gRPC status details that the CLI converts to a NextActions
// error type to be displayed to the user.
message NextActions {
  string nextActions = 1;
}
